        * 10/27
	** fixed an issue of 3d highlighting. refresh_hl was called
	everytime during pan/zoom/rotation.
	** ifigure_canvas.hl_color is added. Currently this property
	affect only 3D object drawing. It will be used for 2D object
	highlighting too. hl_color alpha is hard-coded to 0.65.
	** fig_surface::get_export_val is added

	
	* 10/02
	** 3D graphics in an inset axes is on
	** background alpha of 3D axes is set to transparent by default
	this is forced when calling set_3D(True), when swithching the
	mode from 2D to 3D
	** OpenGL mutlisampling
	backend_wxagg_gl has multisample and multisample_init_done to 
	control how the mutlisampling is done. A user can change setting
	from Preference->Appearance tab. When mutltisampling is off,
	it uses a texture size exactly the same as screen size. It
	saves memory, but it uses hardware smoothing, which does not look
	very good expecially when transparency is used.
	

	* 09/24
        ** navibar::ClickP1Button
	ClickP1Button(self, name) allows to click navigation
	bar button from program.
	
	* 09/22
	** set_gl_hl_use_array_idx is added to gl_component

	* 09/04

	** mode 341 (CallMethod button is added to EditList)
	This button is used to call object method. In the construction,
	string name of method should be give. An object is passed via
	SetValue to tell which object's method should be called.

	** methods to extract subset of gl_component plot data

	v, idx, cdata = gl_component::get_subset(component = None)
	gl_component::shown_component property to get shown component

	example to plot a subset of solid plot

        >> v, idx, cdata = proj.model1.mfem.mfembook.page1.axes1.face.get_subset()
        >> figure();solid(v, idx),
	
	which is equivalent to
	
	>> s = proj.model1.mfem.mfembook.page1.axes1.face.shown_component
        >> v, idx, cdata = proj.model1.mfem.mfembook.page1.axes1.face.get_subset(s)
        >> figure();solid(v, idx)

	

	** inverse keyword to gl_component::hide_component
	